--- a/mbr-additional.css
+++ b/mbr-additional.css
@@ -683,7 +683,7 @@ a {
   transition: color 0.6s;
 }
 .cid-s48MCQYojq {
-  background-image: url("https://ibb.co/N6QL6Dq");
+  background-image: url("https://i.ibb.co/0j8fj4L/background7.jpg");
 }
 .cid-s48MCQYojq .mbr-section-title {
   text-align: center;
